# Prog1-BME

./: NHF_otletek.md
0.zh/: feladat.c  foglalasok.txt
Eloadas/: 1st.c
Extras/kerites/: kerites.c
Extras/ora/: svg_clock.c
Gyakorlat/: fel_4.c
Gyakorlat/gyak_1/: 1st.c  1st.md
Gyakorlat/gyak_2/: fel_2.c  fel_3.c
Labor/lab_1/: feladat_5.c  feladat_7.c  feladat_8.c  feladat__6_9.c
Labor/lab_2/: feladat_2.c  feladat_3.c  feladat_4.c  feladat_5.c  feladat_6.c
Labor/lab_3/: feladat_2  feladat_2.c  feladat_3.c  feladat_4.c  feladat_5.c  feladat_6.c  feladat_7.c
Labor/lab_4/: feladat_1.c  feladat_1.md  feladat_2.c  feladat_3.c  feladat_4.c  labor_5.c
Labor/lab_6/: feladat_2.c  feladat_3.c  feladat_4.c  feladat_5.c  feladat_6_7.c
Labor/lab_7/: feladat_1.c  feladat_2.c  feladat_3.c  feladat_4_5.c
Labor/lab_8/: feladat_1_2.c  feladat_3.c  feladat_4.c  feladat_5.c
NHF/: CMakeLists.txt  console.c  console.h  debugmalloc.h  ini_reader.c  ini_reader.h  main.c  main.h  source_reader.c  source_reader.h  template.md  test.c  theme.ini  types.h
NHF_backup/: CMakeLists.txt  main.c
